<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hsbackground"
    android:paddingLeft="@dimen/paddingValue"
    android:paddingTop="@dimen/paddingValue"
    android:paddingRight="@dimen/paddingValue"
    android:paddingBottom="@dimen/paddingValue"
    tools:context=".EditFriyayPartic">

    <TableLayout
        android:id="@+id/editFriyayParticTL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/editFriyayParticTLrow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/paddingValue">

            <TextView
                android:id="@+id/editFriyayParticOldNameTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:scrollbarSize="@dimen/textSize3"
                android:text="@string/currentFriyayParticName"
                android:textColor="@color/mainColor" />
        </TableRow>

        <TableRow
            android:id="@+id/editFriyayParticTLrow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editFriyayParticNewNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/editFriyayParticHint"
                android:inputType="textPersonName"
                android:scrollbarSize="@dimen/textSize3"
                android:text="@string/editFriyayParticInput"
                android:textColorHint="@color/mainColor" />

            <Button
                android:id="@+id/editFriyayParticFixButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:scrollbarSize="@dimen/textSize3"
                android:text="@string/fix" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>