<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hsbackground"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/home_table_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/paddingValue"
        android:paddingTop="@dimen/paddingValue"
        android:paddingRight="@dimen/paddingValue"
        android:paddingBottom="@dimen/paddingValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/ht_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/events_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="goEventsList"
                android:text="@string/eventsList"
                android:textSize="@dimen/textSize" />
        </TableRow>

        <TableRow
            android:id="@+id/ht_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friyay_partci_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="goFriyayParticipants"
                android:text="@string/friyayPartic"
                android:textSize="@dimen/textSize" />
        </TableRow>

        <TableRow
            android:id="@+id/ht_row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/friyay_games_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="goFriyayGames"
                android:text="@string/friyayGames"
                android:textSize="@dimen/textSize" />
        </TableRow>

        <TableRow
            android:id="@+id/ht_row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/counter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="goCounters"
                android:text="@string/counters"
                android:textSize="@dimen/textSize" />
        </TableRow>

        <TableRow
            android:id="@+id/ht_row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/server_ratio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="goServerRatio"
                android:text="@string/serverRatio"
                android:textSize="@dimen/textSize" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>