<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hsbackground"
    android:paddingLeft="@dimen/paddingValue"
    android:paddingTop="@dimen/paddingValue"
    android:paddingRight="@dimen/paddingValue"
    android:paddingBottom="@dimen/paddingValue"
    tools:context=".EventsList">

    <TableLayout
        android:id="@+id/eventsTL"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/eventsTLrow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="@dimen/paddingValue">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventsListRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/semiTransparent"
                android:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/eventsTLrow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/eventNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/eventNameHint"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize2" />
        </TableRow>

        <TableRow
            android:id="@+id/eventsTLrow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/dateET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/eventDateHint"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize2" />

            <Button
                android:id="@+id/addEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:onClick="addEvents"
                android:text="@string/add"
                android:textSize="@dimen/textSize2" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>