<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hsbackground"
    android:paddingLeft="@dimen/paddingValue"
    android:paddingTop="@dimen/paddingValue"
    android:paddingRight="@dimen/paddingValue"
    android:paddingBottom="@dimen/paddingValue"
    tools:context=".FriyayGames">

    <TableLayout
        android:id="@+id/friyayGamesTL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="25dp">

        <TableRow
            android:id="@+id/friyayGamesTLrow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="@dimen/paddingValue">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friyayGamesRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/semiTransparent"
                android:backgroundTint="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/friyayGamesTLrow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/friyayGamesRngTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/friyayGamesRngTitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />
        </TableRow>

        <TableRow
            android:id="@+id/friyayGamesTLrow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/friyayGamesNumET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/numberOfPlayersHint"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize2" />

            <Button
                android:id="@+id/friyayGamesRngButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/acme"
                android:text="@string/friyayGamesButton"
                android:textSize="@dimen/textSize2" />
        </TableRow>

        <TableRow
            android:id="@+id/friyayGamesTLrow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rngOutputTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/friyayGamesRngOutput"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>